--- a/Views/GarbageCategories/Delete.cshtml
+++ b/Views/GarbageCategories/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.GarbageCategory
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "AfvalTypes";
 }
 
 <h1>Delete</h1>
@@ -12,7 +12,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Naam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
