--- a/Views/GarbageCategories/Index.cshtml
+++ b/Views/GarbageCategories/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AfvalScheiden.Models.GarbageCategory>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AfvalTypes";
 }
 
-<h1>Index</h1>
+<h1>AfvalTypes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Naam
             </th>
             <th></th>
         </tr>
