--- a/Views/Governments/Details.cshtml
+++ b/Views/Governments/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.Government
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Gemeentes";
 }
 
 <h1>Details</h1>
@@ -11,13 +11,13 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Naam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostalCode)
+            Postcode
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PostalCode)
