--- a/Views/Governments/Index.cshtml
+++ b/Views/Governments/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AfvalScheiden.Models.Government>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gemeentes";
 }
 
-<h1>Index</h1>
+<h1>Gemeentes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Naam
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PostalCode)
+                Postcode
             </th>
             <th></th>
         </tr>
