--- a/Views/People/Create.cshtml
+++ b/Views/People/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.Person
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Gebruikers";
 }
 
 <h1>Create</h1>
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GovernmentId" class="control-label"></label>
+                <label asp-for="GovernmentId" class="control-label">Gemeente</label>
                 <select asp-for="GovernmentId" class ="form-control" asp-items="ViewBag.GovernmentId"></select>
             </div>
             <div class="form-group">
