--- a/Views/GarbageCategories/Create.cshtml
+++ b/Views/GarbageCategories/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.GarbageCategory
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "AfvalTypes";
 }
 
 <h1>Create</h1>
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
