--- a/Views/GarbageCategories/Details.cshtml
+++ b/Views/GarbageCategories/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.GarbageCategory
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "AfvalTypes";
 }
 
 <h1>Details</h1>
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Naam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
