--- a/Views/GarbageCategories/Edit.cshtml
+++ b/Views/GarbageCategories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.GarbageCategory
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "AfvalTypes";
 }
 
 <h1>Edit</h1>
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
