--- a/Views/Logbooks/Create.cshtml
+++ b/Views/Logbooks/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.Logbook
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Logboek";
 }
 
 <h1>Create</h1>
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonId" class="control-label"></label>
+                <label asp-for="PersonId" class="control-label">Gebruiker</label>
                 <select asp-for="PersonId" class ="form-control" asp-items="ViewBag.PersonId"></select>
             </div>
             <div class="form-group">
