--- a/Views/People/Edit.cshtml
+++ b/Views/People/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AfvalScheiden.Models.Person
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Gebruikers";
 }
 
 <h1>Edit</h1>
@@ -14,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GovernmentId" class="control-label"></label>
+                <label asp-for="GovernmentId" class="control-label">Gemeente</label>
                 <select asp-for="GovernmentId" class="form-control" asp-items="ViewBag.GovernmentId"></select>
                 <span asp-validation-for="GovernmentId" class="text-danger"></span>
             </div>
