--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AfvalScheiden.Models.Person>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gebruikers";
 }
 
-<h1>Index</h1>
+<h1>Gebruikers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Naam
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Government)
+                Gemeente
             </th>
             <th></th>
         </tr>
