--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,6 +59,13 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Logbooks" asp-action="Index">Logboek</a>
                         </li>
                         }
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="../swagger">SwaggerApi></a>
+                                    </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
