--- a/Views/Home/Quiz.cshtml
+++ b/Views/Home/Quiz.cshtml
@@ -9,14 +9,14 @@
         }
 
         .header {
-            background-color: #1abc9c; /* Minty green color */
+            background-color: #1abc9c; 
             color: #fff;
             padding: 20px;
             text-align: center;
         }
 
         .quiz-box {
-            border: 2px solid #1abc9c; /* Minty green color */
+            border: 2px solid #1abc9c;
             padding: 20px;
             margin: 20px;
             background-color: #fff;
@@ -26,7 +26,7 @@
 
             .quiz-box h2 {
                 font-size: 24px;
-                color: #1abc9c; /* Minty green color */
+                color: #1abc9c; 
             }
 
             .quiz-box p {
@@ -36,7 +36,7 @@
         .quiz-button {
             text-decoration: none;
             padding: 10px 20px;
-            background-color: #1abc9c; /* Minty green color */
+            background-color: #1abc9c; 
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -44,7 +44,7 @@
         }
 
             .quiz-button:hover {
-                background-color: #148c7e; /* Darker minty green on hover */
+                background-color: #148c7e; 
             }
     </style>
 </head>
@@ -69,7 +69,7 @@
 
     <div class="quiz-box">
         <h2>Quiz 3: Al dat Afval</h2>
-        <p>Dit is het derde quiz</p>
+        <p>Dit is de derde quiz</p>
         <button class="quiz-button" onclick="window.location.href='https://kahoot.it/solo/?quizId=bda3ef8d-36d1-4a24-9352-ce045e6538a4'">Ga naar quiz</button>
     </div>
 </body>
